--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -98,16 +99,19 @@
                 <img class="header-container-img-mobile" width="90%" height="auto" src="./asset/images/profile.webp" alt="Profile Picture">
             </div>
 
-            <!-- REPLACED intro with CV's 'About Myself' wording -->
+            <!-- UPDATED intro: polished & no VA mention -->
             <div class="information-body-paragraphs">
                 <p class="information-body-paragraphs-textarea">
-                    I am a biostatistics Ph.D. student focused on building reliable, data-driven tools for infectious disease modeling and public health decision-making. My current work centers on (i) <strong>machine-learning–based calibration for agent-based epidemic models</strong>—developing a three-layer bidirectional LSTM calibrator that improves accuracy and runtime relative to ABC and is being productized as <code>epiworldRcalibrate</code>—and (ii) <strong>comparative evaluation of effective reproduction number (R<sub>t</sub>) estimators</strong> using agent-based network models. I collaborate closely with
+                    I’m a biostatistics Ph.D. student dedicated to building reliable, data-driven tools for infectious-disease modeling and public-health decision-making. My current work focuses on
+                    <strong>machine-learning–based calibration for agent-based epidemic models</strong>—including a three-layer bidirectional LSTM calibrator that improves accuracy and runtime over ABC and is being productized as <code>epiworldRcalibrate</code>—and on the
+                    <strong>comparative evaluation of effective reproduction number (R<sub>t</sub>) estimators</strong> using agent-based network models. I collaborate closely with
                     <a href="https://medicine.utah.edu/faculty/bernardo-modenesi" target="_blank" class="information-body-paragraphs-textarea-strong">Dr. Bernardo Modenesi</a>,
                     <a href="https://medicine.utah.edu/faculty/yue-zhang" target="_blank" class="information-body-paragraphs-textarea-strong">Dr. Yue Zhang</a>, and
-                    <a href="https://ggvy.cl/" target="_blank" class="information-body-paragraphs-textarea-strong">Dr. George Vega Yon</a>; I contribute to open-source tools (e.g., <code>epiworldR</code>) and manage complex EHR/VA datasets with reproducible workflows.
+                    <a href="https://ggvy.cl/" target="_blank" class="information-body-paragraphs-textarea-strong">Dr. George Vega Yon</a>, and I contribute to open-source tools such as <code>epiworldR</code>.
                 </p>
+
                 <p class="information-body-paragraphs-textarea">
-                    Beyond methods development, I <strong>develop R packages</strong> with an emphasis on clear APIs, documentation, and reproducibility; current efforts include <code>epiworldRcalibrate</code> for practical calibration of epidemic ABMs and <code>imaginarycss</code> for Cognitive Social Structures (software paper in preparation, Sept. 2025). I share results with both technical and applied audiences (CDC 2024; ENAR 2025; JSM 2025 selection), aiming to translate rigorous statistics and machine learning into actionable insights for public health.
+                    Beyond methods, I <strong>develop R packages</strong> with clear APIs, careful documentation, and reproducible workflows. Current efforts include <code>epiworldRcalibrate</code> for practical calibration of epidemic ABMs and <code>imaginarycss</code> for Cognitive Social Structures (software paper in preparation, Sept. 2025). I share results with both technical and applied audiences (CDC 2024; ENAR 2025; JSM 2025 selection) with the goal of turning rigorous statistics and machine learning into actionable public-health insight.
                 </p>
             </div>
 
